# TFY4235_Exam

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  montecarlo.cpp  montecarlo.hpp  utils.cpp  utils.hpp
src/python/: numberHamiltonians.py  plotter.py
